--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -7,4 +5,6 @@
   text-align: center;
 }
 
- 
+:root {
+  --color-base-200: oklch(98% 0 0);
+}
